--- a/templates/achat.jinja
+++ b/templates/achat.jinja
@@ -1,15 +1,37 @@
 {% extends 'layout.html' %}
 
+{% block navbar %}
+  <nav>
+        <ul class="flex border-b mt-5 text-xl">
+            <li class="mr-1 ml-10">
+              <a class="bg-white inline-block py-2 px-4 text-{{ session['color'] }}-500 hover:text-{{ session['color'] }}-800 font-semibold" href="/">Chinook</a>
+            </li>
+            <li class="mr-1">
+              <a class="bg-white inline-block py-2 px-4 text-{{ session['color'] }}-500 hover:text-{{ session['color'] }}-800 font-semibold" href="/artistes">Artistes</a>
+            </li>
+            <li class="mr-1">
+              <a class="bg-white inline-block py-2 px-4 text-{{ session['color'] }}-500 hover:text-{{ session['color'] }}-800 font-semibold" href="/albums">Albums</a>
+            </li>
+            <li class="-mb-px mr-1">
+              <a class="bg-white inline-block border-l border-t border-r rounded-t py-2 px-4 text-{{ session['color'] }}-700 font-semibold" href="{{ session['panierLink'] }}">Panier</a>
+            </li>
+        </ul>
+    </nav>
+{% endblock %}
+
 {% block entete %}
-  Merci de votre confiance
+    <div class="mb-10 flex justify-center">
+        Merci de votre confiance
+    </div>
 {% endblock %}
 
 {% block contenu %}
-    <h3>Insérez votre CB <br> 0:)</h3>
-    <ol>
-        {% for d in data %}
-            <li>{{ d[0] }} - {{ d[1] }} </li>
+    <h3 class="mt-10 flex justify-center">Insérez votre CB 😇</h3>
+    <ul>
+        {% for d in session['panier'] %}
+            <li class="ml-12 mt-3 mb-3 bg-white rounded-lg shadow-xl pl-5 pt-2 pb-2">{{ d[0] }} - {{ d[1] }} </li>
         {% endfor %}
-    </ol>
-    <b>Prix total : {{ total }}</b>
+    </ul>
+    <div class="ml-5"> <b>Prix total : {{ total }}</b> </div>
+    
 {% endblock %}
