--- a/templates/album.jinja
+++ b/templates/album.jinja
@@ -4,23 +4,23 @@
   <nav>
         <ul class="flex border-b mt-5 text-xl">
             <li class="mr-1 ml-10">
-              <a class="bg-white inline-block py-2 px-4 text-blue-500 hover:text-blue-800 font-semibold" href="/">Chinook</a>
+              <a class="bg-white inline-block py-2 px-4 text-{{ session['color'] }}-500 hover:text-{{ session['color'] }}-800 font-semibold" href="/">Chinook</a>
             </li>
             <li class="mr-1">
-              <a class="bg-white inline-block py-2 px-4 text-blue-500 hover:text-blue-800 font-semibold" href="/artistes">Artistes</a>
+              <a class="bg-white inline-block py-2 px-4 text-{{ session['color'] }}-500 hover:text-{{ session['color'] }}-800 font-semibold" href="/artistes">Artistes</a>
             </li>
             <li class="-mb-px mr-1">
-              <a class="bg-white inline-block border-l border-t border-r rounded-t py-2 px-4 text-blue-700 font-semibold" href="/albums">Albums</a>
+              <a class="bg-white inline-block border-l border-t border-r rounded-t py-2 px-4 text-{{ session['color'] }}-700 font-semibold" href="/albums">Albums</a>
             </li>
             <li class="mr-1">
-              <a class="bg-white inline-block py-2 px-4 text-gray-400 font-semibold" href="#">Panier</a>
+              <a class="bg-white inline-block py-2 px-4 {{ session['panierAvailable'] }} font-semibold" href="{{ session['panierLink'] }}">Panier</a>
             </li>
         </ul>
     </nav>
 {% endblock %}
 
 {% block entete %}
-  <div class="flex justify-center mb-10">
+  <div class="flex justify-center mb-20">
     <i>{{ nomAlbum }}</i> <br> de {{ nomArtiste }}
   </div>
 {% endblock %}
@@ -34,26 +34,27 @@
         {
           valeur += parseFloat(checkbox.value)
           valeur = Math.round(valeur*100)/100;
-          document.getElementById("prixTotal").innerHTML = '<b>Prix du panier :' + valeur +'</b>';
+          document.getElementById("prixTotal").innerHTML = '<b>Prix du panier : ' + valeur +'</b>';
         } else {
           valeur -= parseFloat(checkbox.value)
           valeur = Math.round(valeur*100)/100;
-          document.getElementById("prixTotal").innerHTML = '<b>Prix du panier :' + valeur +'</b>';
+          document.getElementById("prixTotal").innerHTML = '<b>Prix du panier : ' + valeur +'</b>';
         }
       }
     </script>
 
-    <p>Albums' tracks B)</p>
-    <p id='prixTotal'></p>
-    <form action="./commande" method="POST">
-      <fieldset>
-        {% for track in tracks %}
-          <div>
-            <input type="checkbox" id="{{ track['Name'] }}" name="{{ track['Name'] }}" value="{{ track['UnitPrice'] }}" onclick="calc(this.id);">
-            <label for="{{ track['Name'] }}"> {{ track['Name'] }}  | {{ track['MilliSeconds']//3600//60 }}m{{ track['MilliSeconds']//3600%60 }}s | {{ track['UnitPrice'] }}$USD </label>
-          </div>
-        {% endfor %}
-        <button type="submit">Acheter</button>
-      </fieldset>
+    <div class="pl-12">
+      <h4 class="text-{{ session['color'] }}-900 font-bold mt-5" id='prixTotal'></h4>
+      <form class=" bg-white px-4" action="./commande" method="POST">
+        <fieldset>
+          {% for track in tracks %}
+            <div class="form-check my-5 pt-3 pb-3 pl-5 bg-white rounded-lg shadow-xl hover:bg-{{ session['color'] }}-100 hover:text-white duration-150 ease-in-out">
+              <input type="checkbox" id="{{ track['Name'] }}" class="form-check-input appearance-none h-4 w-4 border border-gray-300 rounded-sm bg-white checked:bg-{{ session['color'] }}-600 checked:border-{{ session['color'] }}-600 focus:outline-none transition duration-200 mt-1 align-top bg-no-repeat bg-center bg-contain float-left mr-2 cursor-pointer" name="{{ track['Name'] }}" value="{{ track['UnitPrice'] }}" onclick="calc(this.id);">
+              <label class="form-check-label inline-block text-{{ session['color'] }}-800" for="flexCheckDefault"> {{ track['Name'] }}  | {{ track['MilliSeconds']//3600//60 }}m{{ track['MilliSeconds']//3600%60 }}s | {{ track['UnitPrice'] }}$USD </label>
+            </div>
+          {% endfor %}
+          <button class="mb-12 px-4 py-2 border-2 border-{{ session['color'] }}-500 text-{{ session['color'] }}-500 font-medium text-m leading-tight uppercase rounded bg-white hover:bg-{{ session['color'] }}-500 hover:text-white duration-150 ease-in-out" type="submit">Acheter</button>
+        </fieldset>
       </form>
+    </div>
 {% endblock %}
