--- a/templates/artiste.jinja
+++ b/templates/artiste.jinja
@@ -4,39 +4,51 @@
   <nav>
         <ul class="flex border-b mt-5 text-xl">
             <li class="mr-1 ml-10">
-              <a class="bg-white inline-block py-2 px-4 text-blue-500 hover:text-blue-800 font-semibold" href="/index">Chinook</a>
+              <a class="bg-white inline-block py-2 px-4 text-{{ session['color'] }}-500 hover:text-{{ session['color'] }}-800 font-semibold" href="/index">Chinook</a>
             </li>
             <li class="-mb-px mr-1">
-              <a class="bg-white inline-block border-l border-t border-r rounded-t py-2 px-4 text-blue-700 font-semibold" href="/artistes">Artistes</a>
+              <a class="bg-white inline-block border-l border-t border-r rounded-t py-2 px-4 text-{{ session['color'] }}-700 font-semibold" href="/artistes">Artistes</a>
             </li>
             <li class="mr-1">
-              <a class="bg-white inline-block py-2 px-4 text-blue-500 hover:text-blue-800 font-semibold" href="/albums">Albums</a>
+              <a class="bg-white inline-block py-2 px-4 text-{{ session['color'] }}-500 hover:text-{{ session['color'] }}-800 font-semibold" href="/albums">Albums</a>
             </li>
             <li class="mr-1">
-              <a class="bg-white inline-block py-2 px-4 text-gray-400 font-semibold" href="#">Panier</a>
+              <a class="bg-white inline-block py-2 px-4 {{ session['panierAvailable'] }} font-semibold" href="{{ session['panierLink'] }}">Panier</a>
             </li>
         </ul>
     </nav>
 {% endblock %}
 
 {% block entete %}
-  {{ nomArtiste }}
+  <div class="flex justify-center">
+    {{ nomArtiste }}
+  </div>
 {% endblock %}
 
 {% block contenu %}
-    <div class="container">
-      <div class="row">
-        {% for album in albums %}
-          <div class="col-md-1"></div>
-          <div class="card" style="width: 10rem;">
-            <img class="card-img-top" src="https://picsum.photos/200/300?random={{(loop.index)%3}}" alt="Card image cap">
-            <div class="card-body">
-              <h5 class="card-title"><a href="/album?album={{ album['Title'] }}&artiste={{ nomArtiste }}">{{ album['Title'] }}</a></h5>
-              <!--<p class="card-text"></p>-->
-              <a href="/album?album={{ album['Title'] }}&artiste={{ nomArtiste }}" class="btn btn-primary">Check it</a>
-            </div>
-          </div>
-        {% endfor %}
+    <div class="pt-10 flex items-center">
+      <div class="flex-1 max-w-5xl mx-auto p-10">
+        <ul class="grid grid-cols-8 gap-20 grid-flow-row">
+          {% for album in albums %}
+              {% if [True,False]|random() %}
+                <li class="col-span-4 transform -rotate-{{ [0,3,6,9,12] | random() }} translate-x-{{ [0,3,6,9,12] | random() }} translate-y-{{ [0,3,6,9,12] | random() }} bg-white rounded-lg shadow-xl hover:bg-{{ session['color'] }}-100 delay-50 duration-100 p-5 rounded-lg">
+              {% else %}
+                <li class="col-span-4 transform rotate-{{ [0,3,6,9,12] | random() }} translate-x-{{ [0,3,6,9,12] | random() }} translate-y-{{ [0,3,6,9,12] | random() }} bg-white rounded-lg shadow-xl hover:bg-{{ session['color'] }}-100 delay-50 duration-100 p-5 rounded-lg">
+              {% endif %}
+              <!-- Modifié de : https://tailwindcomponents.com/component/spotify-playlist-card -->
+              <!-- Autre concept : https://tailwind-elements.com/snippets/tailwind/tailwindelements/3736695 -->
+              <div class="flex items-center justify-center">
+                <!-- Card  -->
+                <a class="w-full group" href="/album?album={{ album['Title'] }}&artiste={{ nomArtiste }}">
+                  <!-- Image Cover -->
+                  <img src="https://picsum.photos/300?random={{ [0,1,2,3,4,5] | random() }}" class="w-full rounded shadow" />
+                  <!-- Title -->
+                  <h3 class="text-{{ session['color'] }}-900 font-bold mt-5"> {{ album['Title'] }} </h3>
+                </a>
+              </div>
+            </li>
+          {% endfor %}
+        </ul>
       </div>
     </div>
 {% endblock %}
