--- a/templates/index.jinja
+++ b/templates/index.jinja
@@ -13,7 +13,7 @@
               <a class="bg-white inline-block py-2 px-4 text-{{ session['color'] }}-500 hover:text-{{ session['color'] }}-800 font-semibold" href="/albums">Albums</a>
             </li>
             <li class="mr-1">
-              <a class="bg-white inline-block py-2 px-4 text-gray-400 font-semibold" href="#">Panier</a>
+              <a class="bg-white inline-block py-2 px-4 {{ session['panierAvailable'] }} font-semibold" href="{{ session['panierLink'] }}">Panier</a>
             </li>
         </ul>
     </nav>
