--- a/templates/index_albums.jinja
+++ b/templates/index_albums.jinja
@@ -4,16 +4,16 @@
   <nav>
         <ul class="flex border-b mt-5 text-xl">
             <li class="mr-1 ml-10">
-              <a class="bg-white inline-block py-2 px-4 text-blue-500 hover:text-blue-800 font-semibold" href="/">Chinook</a>
+              <a class="bg-white inline-block py-2 px-4 text-{{ session['color'] }}-500 hover:text-{{ session['color'] }}-800 font-semibold" href="/">Chinook</a>
             </li>
             <li class="mr-1">
-              <a class="bg-white inline-block py-2 px-4 text-blue-500 hover:text-blue-800 font-semibold" href="/artistes">Artistes</a>
+              <a class="bg-white inline-block py-2 px-4 text-{{ session['color'] }}-500 hover:text-{{ session['color'] }}-800 font-semibold" href="/artistes">Artistes</a>
             </li>
             <li class="-mb-px mr-1">
-              <a class="bg-white inline-block border-l border-t border-r rounded-t py-2 px-4 text-blue-700 font-semibold" href="/albums">Albums</a>
+              <a class="bg-white inline-block border-l border-t border-r rounded-t py-2 px-4 text-{{ session['color'] }}-700 font-semibold" href="/albums">Albums</a>
             </li>
             <li class="mr-1">
-              <a class="bg-white inline-block py-2 px-4 text-gray-400 font-semibold" href="#">Panier</a>
+              <a class="bg-white inline-block py-2 px-4 {{ session['panierAvailable'] }} font-semibold" href="{{ session['panierLink'] }}">Panier</a>
             </li>
         </ul>
     </nav>
@@ -33,9 +33,9 @@
         <ul class="grid grid-cols-10 gap-20 grid-flow-row">
           {% for album in albums %}
               {% if [True,False]|random() %}
-                <li class="col-span-{{ [2,3,4,5] | random() }} transform -rotate-{{ [0,3,6,9,12] | random() }} translate-x-{{ [0,3,6,9,12] | random() }} translate-y-{{ [0,3,6,9,12] | random() }} bg-white rounded-lg shadow-xl hover:bg-blue-100 delay-50 duration-100 p-5 rounded-lg">
+                <li class="col-span-{{ [3,4,5] | random() }} transform -rotate-{{ [0,3,6,9,12] | random() }} translate-x-{{ [0,3,6,9,12] | random() }} translate-y-{{ [0,3,6,9,12] | random() }} bg-white rounded-lg shadow-xl hover:bg-{{ session['color'] }}-100 delay-50 duration-100 p-5 rounded-lg">
               {% else %}
-                <li class="col-span-{{ [2,3,4,5] | random() }} transform rotate-{{ [0,3,6,9,12] | random() }} translate-x-{{ [0,3,6,9,12] | random() }} translate-y-{{ [0,3,6,9,12] | random() }} bg-white rounded-lg shadow-xl hover:bg-blue-100 delay-50 duration-100 p-5 rounded-lg">
+                <li class="col-span-{{ [3,4,5] | random() }} transform rotate-{{ [0,3,6,9,12] | random() }} translate-x-{{ [0,3,6,9,12] | random() }} translate-y-{{ [0,3,6,9,12] | random() }} bg-white rounded-lg shadow-xl hover:bg-{{ session['color'] }}-100 delay-50 duration-100 p-5 rounded-lg">
               {% endif %}
               <!-- Modifié de : https://tailwindcomponents.com/component/spotify-playlist-card -->
               <!-- Autre concept : https://tailwind-elements.com/snippets/tailwind/tailwindelements/3736695 -->
@@ -43,9 +43,9 @@
                 <!-- Card  -->
                 <a class="w-full group" href="/album?artiste=son artiste&album={{album['Title']}}">
                   <!-- Image Cover -->
-                  <img src="https://picsum.photos/600/250?random={{ [0,1,2,3,4,5] | random() }}" class="w-full rounded shadow" />
+                  <img src="https://picsum.photos/300?random={{ [0,1,2,3,4,5] | random() }}" class="w-full rounded shadow" />
                   <!-- Title -->
-                  <h3 class="text-blue-900 font-bold mt-5"> {{ album['Title'] }} </h3>
+                  <h3 class="text-{{ session['color'] }}-900 font-bold mt-5"> {{ album['Title'] }} </h3>
                 </a>
               </div>
             </li>
