--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="../static/tailwind.js"></script>
     <script src="../static/p5.js"></script>
     <script src="../static/p5.pattern.js"></script>
     {% block navbar %}{% endblock %}
